<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="12dp">

  <com.google.android.material.bottomsheet.BottomSheetDragHandleView
    android:id="@+id/dragHandle"
    android:layout_width="wrap_content"
    android:layout_height="30dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tvTag"
    style="@style/Text22sp"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/tag"
    android:textColor="@color/grey_200"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/dragHandle" />

  <EditText
    android:id="@+id/tvEdit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_4dp"
    android:background="@drawable/rounded_rectangle_with_border"
    android:hint="@string/add_tag_here"
    android:minLines="3"
    android:padding="@dimen/_6dp"
    android:textColor="@color/grey_200"
    app:layout_constraintBottom_toTopOf="@+id/tvSave"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvTag" />

  <TextView
    android:id="@+id/tvSave"
    style="@style/Text14sp"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_8dp"
    android:background="@drawable/rounded_rectangle_with_border"
    android:backgroundTint="@color/black"
    android:gravity="center"
    android:padding="@dimen/_8dp"
    android:text="@string/save"
    android:textColor="@color/white"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>